Fix x overflow on view table

--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -11,7 +11,7 @@
 .table-view {
     display: grid;
     width: '300px';
-    overflow: hidden;
+    overflow: auto;
     grid-template-columns: repeat(1, 1fr);
     /* grid-template-rows: 40px 40px; */
     /* grid-template-rows: 40px 30px; */
